--- a/.travis.yml
+++ b/.travis.yml
@@ -20,6 +20,10 @@ git:
 notifications:
  email: false
 
+# Services required
+services:
+ - redis-server
+
 # Before we run scripts
 before_script:
  - go get -u golang.org/x/lint/golint
