--- a/.golangci.yml
+++ b/.golangci.yml
@@ -3,7 +3,7 @@
 
 # options for analysis running
 run:
-  # default concurrency is a available CPU number
+  # default concurrency is an available CPU number
   concurrency: 4
 
   # timeout for analysis, e.g. 30s, 5m, default is 1m
@@ -22,7 +22,7 @@ run:
   # which dirs to skip: issues from them won't be reported;
   # can use regexp here: generated.*, regexp is applied on full path;
   # default value is empty list, but default dirs are skipped independently
-  # from this option's value (see skip-dirs-use-default).
+  # of this option's value (see skip-dirs-use-default).
   # "/" will be replaced by current OS file path separator to properly work
   # on Windows.
   skip-dirs:
@@ -166,33 +166,6 @@ linters-settings:
   gofmt:
     # simplify code: gofmt with `-s` option, true by default
     simplify: true
-  goheader:
-    values:
-      const:
-      # define here const type values in format k:v, for example:
-      # YEAR: 2020
-      # COMPANY: MY COMPANY
-      regexp:
-      # define here regexp type values, for example
-      # AUTHOR: .*@mycompany\.com
-    template:
-    # put here copyright header template for source code files, for example:
-    #    {{ AUTHOR }} {{ COMPANY }} {{ YEAR }}
-    #    SPDX-License-Identifier: Apache-2.0
-    #
-    #    Licensed under the Apache License, Version 2.0 (the "License");
-    #    you may not use this file except in compliance with the License.
-    #    You may obtain a copy of the License at:
-    #
-    #      http://www.apache.org/licenses/LICENSE-2.0
-    #
-    #    Unless required by applicable law or agreed to in writing, software
-    #    distributed under the License is distributed on an "AS IS" BASIS,
-    #    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-    #    See the License for the specific language governing permissions and
-    #    limitations under the License.
-    template-path:
-    # also as alternative of directive 'template' you may put the path to file with the template source
   goimports:
     # put imports beginning with prefix after 3rd-party packages;
     # it's a comma-separated list of prefixes
@@ -251,7 +224,7 @@ linters-settings:
       - bsv
       - bitcoin
   nakedret:
-    # make an issue if func has more lines of code than this setting and it has naked returns; default is 30
+    # make an issue if func has more lines of code than this setting, and it has naked returns; default is 30
     max-func-lines: 30
   prealloc:
     # XXX: we don't recommend using this linter before doing performance profiling.
@@ -296,7 +269,7 @@ linters-settings:
     multi-func: false # Enforces newlines (or comments) after every multi-line function signature
   wsl:
     # If true append is only allowed to be cuddled if appending value is
-    # matching variables, fields or types on line above. Default is true.
+    # matching variables, fields or types online above. Default is true.
     strict-append: true
     # Allow calls and assignments to be cuddled as long as the lines have any
     # matching variables, fields or types. Default is true.
@@ -314,7 +287,7 @@ linters-settings:
     # Allow leading comments to be separated with empty liens
     allow-separated-leading-comment: false
   gofumpt:
-    # Choose whether or not to use the extra rules that are disabled
+    # Choose whether to use the extra rules that are disabled
     # by default
     extra-rules: false
 
@@ -363,7 +336,7 @@ linters:
 
 issues:
   # List of regexps of issue texts to exclude, empty list by default.
-  # But independently from this option we use default exclude patterns,
+  # But independently of this option we use default exclude patterns,
   # it can be disabled by `exclude-use-default: false`. To list all
   # excluded by default patterns execute `golangci-lint run --help`
   exclude:
@@ -398,7 +371,7 @@ issues:
         - lll
       source: "^//go:generate "
 
-  # Independently from option `exclude` we use default exclude patterns,
+  # Independently of option `exclude` we use default exclude patterns,
   # it can be disabled by this option. To list all
   # excluded by default patterns execute `golangci-lint run --help`.
   # Default value for this option is true.
@@ -444,7 +417,7 @@ severity:
   default-severity: error
 
   # The default value is false.
-  # If set to true severity-rules regular expressions become case sensitive.
+  # If set to true severity-rules regular expressions become case-sensitive.
   case-sensitive: false
 
   # Default value is empty list.
