--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -10,8 +10,8 @@ on:
   push:
     branches:
       - "*"
-  schedule:
-    - cron: '1 4 * * *'
+#  schedule:
+#    - cron: '1 4 * * *'
 
 jobs:
   test:
@@ -22,16 +22,16 @@ jobs:
     runs-on: ${{ matrix.os }}
     steps:
       - name: Install Go
-        uses: actions/setup-go@v2
+        uses: actions/setup-go@v2.1.4
         with:
           go-version: ${{ matrix.go-version }}
       - name: Checkout code
-        uses: actions/checkout@v2
+        uses: actions/checkout@v2.3.5
       - name: Start Redis
         uses: supercharge/redis-github-action@1.1.0
         with:
           redis-version: 6
-      - uses: actions/cache@v2
+      - uses: actions/cache@v2.1.6
         with:
           path: |
             ~/go/pkg/mod              # Module download cache
