--- a/.github/mergify.yml
+++ b/.github/mergify.yml
@@ -171,10 +171,10 @@ pull_request_rules:
         - author!=dependabot[bot]
         - author!=mergify[bot]
         - author!=mrz1836
+        - author!=icellan
     actions:
       comment:
-        message: |
-          Welcome to our open-source project! 💘
+        message: Welcome to our open-source project! 💘
 
   # ===============================================================================
   # STALE BRANCHES
