--- a/.devcontainer.json
+++ b/.devcontainer.json
@@ -1,5 +1,5 @@
 {
-    "name": "go-broadcast dev container",
+    "name": "go-cache dev container",
     "image": "mcr.microsoft.com/devcontainers/go:0-1.24-bullseye",
     "features": {
         "ghcr.io/devcontainers/features/github-cli:1": {},
