--- a/.github/.env.custom
+++ b/.github/.env.custom
@@ -28,3 +28,7 @@ GO_COVERAGE_PROVIDER=codecov
 
 # Codecov Configuration (only used when provider=codecov)
 CODECOV_TOKEN_REQUIRED=true
+
+# Redis Service
+ENABLE_REDIS_SERVICE=true
+REDIS_SERVICE_MODE=always
