--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -32,10 +32,7 @@ builds:
 archives:
   - id: go-cache
     name_template: >-
-      {{- .ProjectName }}_
-      {{- .Version }}_
-      {{- .Os }}_
-      {{- .Arch }}
+      {{- .ProjectName }}_ {{- .Version }}_ {{- .Os }}_ {{- .Arch }}
     files:
       - LICENSE
       - README.md
